Feat: Implementing Create Project Functions